# semSistemasOperativos

./: CMakeLists.txt
01_procesamientoPorLotes_1/src/: main.cpp
02_procesamientoPorLotes_2/misArchivos/: ejercicios_1.txt  ejercicios_2.txt
02_procesamientoPorLotes_2/src/: main.cpp
03_algoritmosDePlanificacion_1/include/: console.hpp  manager.hpp  process.hpp
03_algoritmosDePlanificacion_1/src/: console.cpp  main.cpp  manager.cpp  process.cpp
04_algoritmosDePlanificacion_2/: main.py
04_algoritmosDePlanificacion_2/include/: manager.hpp  process.hpp
04_algoritmosDePlanificacion_2/src/: main.cpp  manager.cpp  process.cpp
05_administradorDeMemoria_1/: main.py
05_administradorDeMemoria_1/include/: manager.hpp
05_administradorDeMemoria_1/src/: main.cpp  manager.cpp
06_administradorDeMemoria_2/: main.py
06_administradorDeMemoria_2/include/: manager.hpp
06_administradorDeMemoria_2/src/: main.cpp  manager.cpp
07_hilos_1/: main.py
08_productor_consumidor_1/: main.py
09_lector_escritor_1/: file.txt  main.py
10_final/: main.py
10_final/include/: manager.hpp  process.hpp
10_final/src/: main.cpp  process.cpp
