cmake_minimum_required(VERSION 3.27)
project(semSistemasOperativos LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_compile_options(-Wall -pedantic -Wextra)
set(pybind11_DIR "C:/Program Files/Python311/Lib/site-packages/pybind11/share/cmake/pybind11")
find_package(pybind11 REQUIRED)

function(add_program TARGET_NAME)
	file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/src/*.cpp")
	add_executable(${TARGET_NAME} ${SOURCES})
	target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/include" "C:/Program Files/Python311/include")
endfunction()

function(add_python_lib TARGET_NAME LIB_NAME)
	file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/src/*.cpp")
	pybind11_add_module(${LIB_NAME} ${SOURCES})
	target_include_directories(${LIB_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}/include")
	target_link_directories(${LIB_NAME} PRIVATE "C:/Program Files/Python311/libs")
	target_link_libraries(${LIB_NAME} PRIVATE python311)
endfunction()

add_program(01_procesamientoPorLotes_1)
add_program(02_procesamientoPorLotes_2)
add_program(03_algoritmosDePlanificacion_1)
add_python_lib(04_algoritmosDePlanificacion_2 processManager)
add_python_lib(05_administradorDeMemoria_1 memory_manager)
add_python_lib(06_administradorDeMemoria_2 memory_manager_2)
